# smartbus-reservation-cpp

./: .gitignore  CMakeLists.txt  README.md  app.py  build2_configure.txt  build2_debug.txt  build_and_run.ps1  buildlog.txt  main.cpp  out.txt
.streamlit/: config.toml
build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  bus_reservation.db  cmake_install.cmake
build2/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build2/SmartBusReservationSystem_autogen/: deps  mocs_compilation.cpp
build2/SmartBusReservationSystem_autogen/UYX5XTB5RZ/: moc_BookingPage.cpp  moc_BookingPage.cpp.d  moc_BusPage.cpp  moc_BusPage.cpp.d  moc_DashboardPage.cpp  moc_DashboardPage.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_PassengerPage.cpp  moc_PassengerPage.cpp.d  moc_PaymentPage.cpp  moc_PaymentPage.cpp.d  moc_ReportsPage.cpp  moc_ReportsPage.cpp.d  moc_ReservationPage.cpp  moc_ReservationPage.cpp.d  moc_RoutePage.cpp  moc_RoutePage.cpp.d
database/: DatabaseManager.cpp  DatabaseManager.h
models/: Booking.cpp  Booking.h  Bus.cpp  Bus.h  Driver.cpp  Driver.h  Passenger.cpp  Passenger.h  Payment.cpp  Payment.h  Person.cpp  Person.h  Route.cpp  Route.h  Seat.cpp  Seat.h  Ticket.cpp  Ticket.h
styles/: .gitignore  bus_dashboard.qss
temp_cmake_test/: CMakeLists.txt
ui/: BookingPage.cpp  BookingPage.h  BusPage.cpp  BusPage.h  DashboardPage.cpp  DashboardPage.h  MainWindow.cpp  MainWindow.h  PassengerPage.cpp  PassengerPage.h  PaymentPage.cpp  PaymentPage.h  ReportsPage.cpp  ReportsPage.h  ReservationPage.cpp  ReservationPage.h  RoutePage.cpp  RoutePage.h
